--- a/package.json
+++ b/package.json
@@ -6,7 +6,18 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    
+    "db-format": "prismix && prisma format",
+    "db-push": "prismix && prisma format && prisma db push",
+    "db-gen": "prismix && prisma format && prisma generate",
+    "db-all": "prismix && prisma format && prisma generate && prisma db push",
+    "db-web": "prisma studio",
+    "db-pull": "prisma db pull",
+
+    "db-saf-pull": "prisma db pull --schema=./prisma/db/saf.prisma",
+    "db-saf-gen": "prisma generate --schema=./prisma/db/saf.prisma",
+    "db-saf-web": "prisma studio --schema=./prisma/db/saf.prisma"
   },
   "dependencies": {
     "@chakra-ui/react": "^2.2.4",
@@ -14,11 +25,21 @@
     "@emotion/styled": "^11.9.3",
     "@formkit/auto-animate": "1.0.0-beta.1",
     "@mobily/ts-belt": "^3.12.0",
+    "@next-auth/prisma-adapter": "^1.0.4",
+    "@next-auth/react-query": "^0.0.12",
+    "@prisma/client": "^4.1.1",
     "@tanstack/react-query": "^4.0.10",
     "@tanstack/react-query-devtools": "^4.0.10",
+    "@types/bcrypt": "^5.0.0",
+    "@types/pdfmake": "^0.2.1",
+    "bcrypt": "^5.0.1",
+    "dayjs": "^1.11.4",
     "framer-motion": "^6.5.1",
     "next": "12.2.3",
-    "next-axiom": "^0.11.0",
+    "next-auth": "^4.10.3",
+    "pdfmake": "^0.2.5",
+    "prisma": "^4.1.1",
+    "prismix": "^1.0.21",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
