--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 DATABASE_URL="sqlserver://navo-it.dk:1433;database=NavoIT;user=dash;password=TkYHrjueT9QS75e;trustServerCertificate=true;schema=dashboard"
+DATABASE_URL_COMMON="sqlserver://navo-it.dk:1433;database=NavoIT;user=dash;password=TkYHrjueT9QS75e;trustServerCertificate=true;schema=common"
 DATABASE_URL_SAF="sqlserver://navo-it.dk;Initial Catalog=Order;Persist Security Info=True;User ID=bot;Password=Navo2019Navo;trustServerCertificate=true"
 
 # NEXTAUTH_URL="https://dash.prime.navo.dk"
