--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@tanstack/react-query": "^4.0.10",
     "@tanstack/react-query-devtools": "^4.0.10",
     "@types/bcrypt": "^5.0.0",
+    "@types/papaparse": "^5.3.4",
     "@types/pdfmake": "^0.2.1",
     "bcrypt": "^5.0.1",
     "color-shorthand-hex-to-six-digit": "^4.0.14",
@@ -41,6 +42,7 @@
     "framer-motion": "^6.5.1",
     "next": "12.2.3",
     "next-auth": "^4.10.3",
+    "papaparse": "^5.3.2",
     "pdfmake": "^0.2.5",
     "prisma": "^4.1.1",
     "prismix": "^1.0.21",
