--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/papaparse": "^5.3.4",
     "@types/pdfmake": "^0.2.1",
+    "apexcharts": "^3.35.5",
     "bcrypt": "^5.0.1",
     "color-shorthand-hex-to-six-digit": "^4.0.14",
     "dayjs": "^1.11.4",
@@ -47,6 +48,7 @@
     "prisma": "^4.1.1",
     "prismix": "^1.0.21",
     "react": "18.2.0",
+    "react-apexcharts": "^1.4.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
