--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "color-shorthand-hex-to-six-digit": "^4.0.14",
     "dayjs": "^1.11.4",
     "framer-motion": "^6.5.1",
-    "next": "12.2.3",
+    "next": "^12.3.1",
     "next-auth": "^4.10.3",
     "papaparse": "^5.3.2",
     "pdfmake": "^0.2.5",
